# EoSTool

./: CMakeLists.txt  Tools.c  Tools.h  eos_state.c  eos_state.h  main.c  test.c  test.h
data/: gabbro1.tillotson  granite.tillotson
